test/implicitDup21_4.slq
def foo(x:𝔹){
	y:=dup(x);
	z:=y;
	r:=z; /// error
	if X(z){ /// error
		return x;
	}else{
		forget(y); /// error
	}
	return (r,x);
}
